# bang

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  runWithError.sh  rust-toolchain.toml  theme.toml
examples/: ping.config.toml
src/: actions.rs  application.rs  cli.rs  command.rs  config.rs  lib.rs  main.rs  renderer.rs  ui.rs  views.rs
test/showStderr/: config.toml  test.sh
