[package]
name = "bang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam = "0.8"
crossterm = "0.24"
dirs = "4.0.0"
serde = { version = "1.0.140", features = ["derive"] }
shell-words = "1.1.0"
thiserror = "1.0.31"
toml = "0.5.9"
tui = "0.18"
